# workshop-python-aula17

./: README.md  desafio.db  desafio.py  exercicio_01.py  exercicio_02.py  exercicio_04.py  meubanco.db  pyproject.toml
